Ensure Icon SVGs are properly vertically aligned (#1156)

--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.Icon > svg {
+  display: block; /* Ensure SVG are unaffected by text styles and font metrics, maintaining vertical alignment */
+}
+
 .Icon--size-20 {
   width: var(--base-size-20);
   height: var(--base-size-20);
